# AutoTagging_LockOnMode

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  STATISTICS.md  build.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
cxx_wrapper/: CMakeLists.txt  __init__.py
cxx_wrapper/include/: features.h  gating.h  kalman_filter.h
cxx_wrapper/src/: bindings.cpp  features.cpp  gating.cpp  kalman_filter.cpp
data/samples/: README.md
docs/: API.md  API_REFERENCE.md  USER_GUIDE.md
examples/: inference_example.py  train_example.py
feature_store/: __init__.py  feature_store.py
gui/: __init__.py  app.py  main.py  main_window.py  processing_thread.py  widgets.py  workers.py
gui/widgets/: file_browser.py  model_manager.py  simulator_control.py  track_detail.py  track_list.py
ml/: __init__.py  explainability.py  feature_store.py  inference.py  models.py  trainer.py
ml/inference/: explainability.py
ml/training/: pipeline.py
parsers/: __init__.py  binary_parser.py  file_detector.py  file_router.py  text_parser.py
parsers/binary/: struct_parser.py
parsers/text/: text_parser.py
scripts/: demo.py  train_models.py
simulator/: __init__.py  generate_samples.py  main.py  simulator.py  track_simulator.py
tests/: __init__.py  conftest.py  test_feature_store.py  test_models.py  test_parsers.py  test_simulator.py
tests/integration/: test_end_to_end.py
tests/unit/: test_ml_models.py  test_parsers.py
